[workspace]
resolver = "3"
members = [
    "services/app-compiler",
    "services/backend",
    "services/common",
    "frontend",
    "devtool",
]
exclude = [
    "app" # app must NOT be part of the workspace. It needs to have it's own target directory and lock file
]

[workspace.dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
bson = "2"
mime = "0.3"
thiserror = "1"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
anyhow = "1"
