[workspace]
resolver = "3"
members = [
    "backend",
    "frontend",
    "devtool",
]
exclude = [
    "app", # app templates must NOT be part of the workspace. They need their own target directory and lock file
    "app-next",
]

# for rust-monaco
[patch.crates-io]
yew = {git = "https://github.com/yewstack/yew.git"}

[workspace.dependencies]
axum = { version = "0.8", features = ["http2"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
thiserror = "1"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
anyhow = "1"
