[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
wasm-bindgen = "0.2.88"
web-sys = "0.3"
js-sys = "0.3"
gloo = "0.11"
chrono = "0.4.24"
implicit-clone = "0.6"
anyhow = "1.0.70"
serde_json = "1.0.95"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["time"] }
tracing-web = "0.1"
time = { version = "0.3", features = ["wasm-bindgen"] }
rand = "0.10"
serde = { version = "1.0.159", features = ["derive"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
