[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"

wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlCollection"] }

gloo = "0.8"
gloo-net = { version = "0.2.4", features = ["http", "json"] }
monaco = { git = "https://github.com/siku2/rust-monaco", features = ["yew-components"] }
tracing-web = "0.1.2"

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true, default-features = false }
time = { version = "0.3", features = ["wasm-bindgen"] }
tracing-subscriber = { workspace = true, features = ["time"] }
