[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[features]
emulator = []

[dependencies]
yew = { version = "0.22", features = ["csr"] }
yew-router = "0.19"

wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlCollection"] }

gloo = "0.11"
gloo-net = { version = "0.5", features = ["http", "json"] }
monaco = { version = "0.6", features = ["yew-components"] }
tracing-web = "0.1.2"

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }
time = { version = "0.3", features = ["wasm-bindgen"] }
tracing-subscriber = { workspace = true, features = ["time"] }

split-yew = "0.3.0"
