[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[features]
emulator = []

[dependencies]
yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew"}


wasm-bindgen = "0.2.88"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlCollection"] }

gloo = "0.11"
gloo-net = { version = "0.6", features = ["http", "json"] }
monaco = { version = "0.7", features = ["yew-components"] }
tracing-web = "0.1.2"

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }
time = { version = "0.3", features = ["wasm-bindgen"] }
tracing-subscriber = { workspace = true, features = ["time"] }

split-yew = { git = "https://github.com/aleb2000/split-yew", branch = "yew-playground" }

[build-dependencies]
toml = "1.1"
serde_json = "1"
