[package]
name = "app-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true, features = ["trace", "cors"] }
anyhow = { workspace = true }

common = { path = "../common" }
hyper = "*"
