[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tower-http = { workspace = true, features = ["trace", "cors"] }
bson = { workspace = true }

thiserror = "1"
reqwest = { version = "0.11.10", features = ["json", "stream"] }
common = { path = "../common" }
