[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[features]
simulate-delay = []

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true, features = ["limit", "timeout"] }
tracing = { workspace = true }
anyhow = { workspace = true }
tower-http = { workspace = true, features = ["trace", "cors"] }

common = { path = "../common" }
