[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4", features = ["http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "2"
mime = "0.3"
thiserror = "1"
tower = { version = "0.4", features = ["limit", "timeout"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
